<resources>
    <string name="app_name">Renatic</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Konfirmasi Password</string>
    <string name="add_form">Tambahkan Data Klinis</string>
    <string name="add_photo">Form Data Retina</string>
    <string name="add_clinical">Form Data Klinis</string>
    <string name="noname">none</string>
    <string name="form_retina">Form Ambil Gambar Retina</string>
    <string name="form_patient">Form Data Pasien</string>
    <string name="form_clinical">Form Data Klinis</string>
    <string name="result">Hasil Skrining</string>
    <string name="onprogress">SEDANG DIPROSES</string>
    <string name="submit">Submit</string>
    <string name="status">Status pemeriksaan</string>
    <string name="from_camera">Dari Kamera</string>
    <string name="from_gallery">Dari Galeri</string>

    <string name="result_1">Status terkena diabetes :</string>
    <string name="result_2">Keakuratan hasil prediksi :</string>

    <string name="age">Umur</string>
    <string name="ex_name">cth: Jokowi</string>
    <string name="num">No. BPJS/JKN</string>
    <string name="ex_num">cth: 000012345678</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="ex_dob">cth: 2001-01-01</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="ex_sex">cth: Laki-laki</string>
    <string name="weight">Berat Badan</string>
    <string name="ex_weight">cth: 65kg</string>

    <string name="pregnancies">Pregnancies</string>
    <string name="glucose">Glucose</string>
    <string name="blood_pressure">BloodPressure</string>
    <string name="skin_thickness">SkinThickness</string>
    <string name="insulin">Insulin</string>
    <string name="bmi">BMI</string>
    <string name="diabet">DiabetesperDegree</string>
    <string name="empty_text">…</string>
    <string name="register_tip">Belum punya akun? register</string>
    <string name="register_to">di sini</string>

    <string name="selected_item">dipilih</string>
    <string-array name="sexes">
        <item>Silahkan pilih</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>