<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPatientActivity">
    <include
        android:id="@+id/toolbar2"
        layout="@layout/toolbar2"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:contentDescription="@string/noname"
        android:src="@drawable/custom_line"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"/>
    <TextView
        android:id="@+id/tv_act_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/custom_text_frame"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/form_patient"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:background="@drawable/custom_frame"
        app:layout_constraintTop_toBottomOf="@id/tv_act_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/ex_name"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/num"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_num"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/ex_num"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/dob"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_dob"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/ex_dob"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/sex"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <!--Spinner
            android:id="@+id/spinner_sex"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_frame"/-->
        <EditText
            android:id="@+id/et_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/ex_sex"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="@string/weight"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/ex_weight"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>