<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DataPatientActivity">

    <include
        android:id="@+id/toolbar2"
        layout="@layout/toolbar2"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:contentDescription="@string/noname"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/custom_line"
        app:layout_constraintTop_toBottomOf="@id/toolbar2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:paddingBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_act_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_frame"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/form_patient"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/custom_frame"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_act_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="@string/name"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/custom_frame"
                    android:hint="@string/ex_name"
                    android:inputType="text"
                    android:paddingStart="18dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="13dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="@string/num"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/custom_frame"
                    android:hint="@string/ex_num"
                    android:inputType="number"
                    android:paddingStart="18dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="13dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="@string/dob"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.renatic.app.customView.EditDate
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/custom_frame"
                    android:hint="@string/ex_dob"
                    android:inputType="number"
                    android:paddingStart="18dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="13dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="@string/sex"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_sex"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/custom_frame"
                    android:paddingStart="10dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="start"
                    android:text="@string/weight"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/custom_frame"
                    android:hint="@string/ex_weight"
                    android:inputType="number"
                    android:paddingStart="18dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="13dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>