<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">
    <ProgressBar
        android:id="@+id/load_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_app_logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/edt_password1"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/edt_password2"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/custom_frame"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="15dp"
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/register" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>