<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <ProgressBar
        android:id="@+id/load_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_app_logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_frame"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />
        <TextView
            android:id="@+id/tv_alert_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:paddingStart="5dp"
            android:text="Email Alert Message"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:visibility="visible" />
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_frame"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />
        <TextView
            android:id="@+id/tv_alert_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:paddingStart="5dp"
            android:text="Password Alert Message"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:visibility="visible" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textColor="?attr/colorOnSecondary"
            app:cornerRadius="20dp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tip"
                android:textStyle="bold" />
            <TextView
                android:layout_marginStart="4dp"
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register_to"
                android:textColor="@color/design_default_color_secondary"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--
        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/register" />
        -->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>